# tab-eau_bot

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  __init__.py  pyproject.toml  requirements.txt  setup.cfg
data/interim/: tableau_forum_threads.json
data/interim/test_output/: tableau_online_documentation_paragraphs.json  tableau_prep_documentation_paragraphs.json  tableau_prep_documentation_sections.json
data/processed/: tableau_forum_threads.json
data/processed/cleaned_text_with_sections/: tableau_prep_documentation_sections.json
src/: __init__.py  config.py  dataset.py  features.py  plots.py
src/modeling/: predict.py  train.py
tests/: test_extraction.py
