[flake8]
ignore = E731,E266,E501,C901,W503
max-line-length = 99
exclude = .git,notebooks,references,models,data

[metadata]
name = tableau-bot
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A Retrieval-Augmented Generation (RAG) chatbot for Tableau documentation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/tableau-bot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    -r requirements.txt

[tool:pytest]
testpaths = tests

[isort]
profile = black

[black]
line-length = 88
